2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.RegexToolkit/UpdateInProgressDialog.cs: Name
	  threads to make debugging easier.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.RegexToolkit.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.RegexToolkit.csproj:
	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs:
	* gtk-gui/MonoDevelop.RegexToolkit.RegexLibraryWindow.cs:
	* gtk-gui/MonoDevelop.RegexToolkit.UpdateInProgressDialog.cs:
	  Flush.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.RegexToolkit.addin.xml: Bump MD version.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.RegexToolkit.addin.xml: Added missing "..." to
	  menu item.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.RegexToolkit.csproj: Updated dependencies. We
	  now depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs: In .NET,
	  settings as read-only after the creation of an
	  XmlTextWriter.

2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.RegexToolkit/UpdateInProgressDialog.cs: Limit
	  the number of expressions when querying. Beyond 1230 there
	  is an expression which makes the web service reply to fail.

2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.RegexToolkit/UpdateInProgressDialog.cs: Properly
	  show error messages while updating.

2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.RegexToolkit.csproj:
	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs:
	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs:
	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs: