@@ -1,3 +1,9 @@
+2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: Set button
+	  sensitivity depending on whether entries are full. Pack
+	  icons into same columns as text.
+
 2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.RegexToolkit/UpdateInProgressDialog.cs: Name
